--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -125,6 +125,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<h2>Evventor</h2>
 						<br />
 					</div>
+					<div class="col-md-12" align="center">
+						<h4>Connect with us</h4>
+						<br />
+					</div>
 					<div class="col-md-12">
 						<div class="col-md-4 fo-grid1">
 							<p><i class="fa fa-home" aria-hidden="true"></i>No.32 Aluguntugui Street, East Legon, Accra</p>
