--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -521,6 +521,8 @@ span.fa.fa-shopping-cart.my-cart-icon {
 .vp-header-padding {
   padding: 2em;
   text-align: center;
+  background-color: #e67e22;
+  color: #fff;
 }
 .vp-sup-pla-style {
   padding: 0 6em 0 6em;
@@ -1273,6 +1275,9 @@ ul.product-qty {
 .footer-grid ul li a:hover{
     color:#FAB005;		
 }
+.some-justify p {
+  text-align: justify;
+}
 
 .copy-right p {
     color: #fff;
@@ -1287,6 +1292,85 @@ ul.product-qty {
     color: #E21737;	
 }
 /*-- //footer --*/
+
+/* table */
+.grid-table {
+  width: 100%;
+}
+.grid-table1 {
+  width: 30%;
+  text-align: center;
+}
+.grid-table2 {
+  width: 70%;
+}
+/* table */
+
+
+/* -- Modal -- */
+.the-modal-itself {
+  margin-top: 80px;
+}
+.the-modal-header {
+  text-align: center;
+}
+.the-modal-body {
+  text-align: center;
+}
+.md-body {
+  text-align: center;
+}
+.md-body-fb button {
+  width: 400px;
+  background-color: #3b5997;
+  border-style: none;
+  color: #fff;
+  padding: 2em;
+}
+.md-body-tw button {
+  width: 400px;
+  background-color: #55acee;
+  border-style: none;
+  color: #fff;
+  padding: 2em;
+}
+.md-body-em button {
+  width: 400px;
+  background-color: #dc4e41;
+  border-style: none;
+  color: #fff;
+  padding: 2em;
+}
+.the-modal-footer {
+  text-align: center;
+}
+
+.key1  input[type="text"] ,.key1  input[type="password"]{
+    width: 89%;
+    padding: 10px 10px;
+    font-size: 1em;
+    border: none;
+    border-bottom: none;
+    outline: none;
+    color: #999;
+    float: left;
+    background: none;
+}
+.key1 i{
+      float: left;
+    color: #999;
+    font-size: 1.1em;
+    padding: 13px;
+}
+.key1 {
+    background: #fff;
+    border: 1px solid #999;
+    margin-bottom: 2em;
+    width: 50%;
+    text-align: center;
+}
+/* -- Modal -- */
+
 /*--product--*/
 .banner-top{
 	text-align: center;
@@ -3704,7 +3788,6 @@ span.shortline5 {
 .magin-tops-profile{
     margin-top: -20%;
 }
-
 
 p.p1{
 	padding:0;
