Completed the landing page and fixed issues with the other pages

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -727,7 +727,7 @@ ul.nav.tabs {
     text-decoration:none;
 }
 .mid-1 h6 a:hover {
-    color: #FAB005;
+    color: #e67e22;
 }
 .mid-2 p{
 	float:left;
@@ -1306,6 +1306,17 @@ ul.product-qty {
 }
 /* table */
 
+/* category center div */
+.cen-div {
+  text-align: center;
+  vertical-align: center;
+  padding: 6.5em 0;
+}
+.cen-div h3 {
+  color: #e67e22;
+}
+
+/* category center div */
 
 /* -- Modal -- */
 .the-modal-itself {
@@ -2024,13 +2035,13 @@ a#myTabDrop1 {
 }
 
 .form-w3agile h3{
-    color: #029241;
+    color: #e67e22;
     font-size: 2.5em;
     text-align: center;
     margin-bottom: 1.5em;
 }
 .form-w3agile input[type="submit"] {
-    background: #fdb515;
+    background: #e67e22;
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
@@ -2040,7 +2051,7 @@ a#myTabDrop1 {
     width: 100%;
     cursor: pointer;
     margin-bottom:30px;
-}
+}   /*
 .form-w3agile  input[type="submit"]:hover{
 	background:#029241;
 	transition:0.5s all;
@@ -2048,7 +2059,7 @@ a#myTabDrop1 {
 	-moz-transition:0.5s all;
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
-}
+}   */
 .the-table tr, td{
   padding: 8px;
   width: 500px;
