--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -66,7 +66,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	
 		<div class="header">
 			<div class="container-fluid main-nav-shadow">
-    			<%= image_tag "app/logo1.png", class: "img-head" %>
+    			<%= image_tag "app/logo.png", class: "img-head" %>
     			<ul class="card">
 					<!-- <li><a href="wishlist.html" ><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a></li> -->
 					<!-- Have to put a blog link here -->
@@ -127,7 +127,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
     <div class="container">
 		<div class="banner-info">
 			<br />
-			<h3>Effortlessly plan your event</h3>
+			<h3>You deserve the best event</h3>
 			<h4>The best events start with the best suppliers. Find everything you need, all in one place</h4>
 			<br /><br /><br />
 			<h4><a href="">See how it works</a></h4>
@@ -254,9 +254,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 		<div class="col-md-2">
 			<div class="col-m">
-				<div class="mid-1">
+				<div class="mid-1 cen-div">
 					<div class="women">
-						<h6>Find what you want Easily</h6>
+						<h6>Find what you want</h6>
+						<br />
+						<h3>Easily</h3>
 					</div>
 				</div>
 			</div>
@@ -268,7 +270,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Stationary & Gifts</a></h6>							
+						<h6><a href="single.html">Stationery & Gifts</a></h6>							
 					</div>
 				</div>
 			</div>
@@ -306,7 +308,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<table class="grid-table">
 					<tr>
 						<td class="grid-table1"><%= image_tag "app/clock.png", class: "img-head" %></td>
-						<td class="grid-table2"><b>Save time with your event planning by getting all your event needs faster</b></td>
+						<td class="grid-table2"><b>Save time with your event planning by getting all your event supplies faster</b></td>
 					</tr>
 					<tr>
 						<td class="grid-table1"><%= image_tag "app/running.png", class: "img-head" %></td>
@@ -518,7 +520,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 							<p><i class="fa fa-phone" aria-hidden="true"></i>+1234 758 839 , +1273 748 730</p>	
 						</div>
 						<div class="col-md-4 fo-grid1">
-							<p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@example1.com</a></p>
+							<p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@evventor.com</a></p>
 						</div>
 					</div>
 					<div class="col-md-12" align="center">
@@ -551,7 +553,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo1.png", class: "img-head" %>
+          					<%= image_tag "app/logo.png", class: "img-head" %>
           					<h3 class="modal-title">Register Today</h3>
         				</div>
         				<div class="modal-body md-body">
@@ -594,7 +596,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo1.png", class: "img-head" %>
+          					<%= image_tag "app/logo.png", class: "img-head" %>
           					<h3 class="modal-title">Log in</h3>
         				</div>
         				<div class="modal-body md-body">
