Fixed the category images and the logo

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -165,7 +165,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2 col-md-offset-1">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/equipment", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -177,7 +177,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/catering.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -189,7 +189,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/decor.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -201,7 +201,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/entertainment.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -213,7 +213,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/venue.jpg", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -231,7 +231,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2 col-md-offset-1">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/transport.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -243,7 +243,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/clothing.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -266,7 +266,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/stationery.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -278,7 +278,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/co1.jpg", class: "img-responsive" %>
+					<%= image_tag "app/personnel.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
