Creat sending messages and make search work on all pages

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -130,7 +130,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Equipment</a></h6>
+						<h6><%= link_to "Equipment", { controller: :categories, action: :show, id: "10" }%></h6>
 					</div>
 				</div>
 			</div>
@@ -142,7 +142,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Catering</a></h6>							
+						<h6><%= link_to "Catering", { controller: :categories, action: :show, id: "11" }%></h6>							
 					</div>
 				</div>
 			</div>
@@ -154,7 +154,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Decor</a></h6>
+						<h6><%= link_to "Decor", { controller: :categories, action: :show, id: "8" }%></h6>
 					</div>
 				</div>
 			</div>
@@ -166,7 +166,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Entertainment</a></h6>							
+						<h6><%= link_to "Entertainment", { controller: :categories, action: :show, id: "6" }%></h6>							
 					</div>
 				</div>
 			</div>
@@ -178,7 +178,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Venues</a></h6>							
+						<h6><%= link_to "Venues", { controller: :categories, action: :show, id: "9" }%></h6>							
 					</div>
 				</div>
 			</div>
@@ -196,7 +196,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Transportation</a></h6>
+						<h6><%= link_to "Transport", { controller: :categories, action: :show, id: "4" }%></h6>
 					</div>
 				</div>
 			</div>
@@ -208,7 +208,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Clothing & Accessories</a></h6>							
+						<h6><%= link_to "Clothing", { controller: :categories, action: :show, id: "3" }%></h6>							
 					</div>
 				</div>
 			</div>
@@ -231,7 +231,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Stationery & Gifts</a></h6>							
+						<h6><%= link_to "Stationery & Gifts", { controller: :categories, action: :show, id: "7" }%></a></h6>							
 					</div>
 				</div>
 			</div>
@@ -243,7 +243,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</a>
 				<div class="mid-1">
 					<div class="women">
-						<h6><a href="single.html">Personnel</a></h6>							
+						<h6><%= link_to "Personnel", { controller: :categories, action: :show, id: "2" }%></h6>							
 					</div>
 				</div>
 			</div>
