change image names for categories and profile picture

--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -126,7 +126,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2 col-md-offset-1">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/equipment", class: "img-responsive" %>
+					<%= image_tag "app/banner.png", class: "img-responsive" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
