--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -26,7 +26,7 @@
 			<div class="col-md-4 col-xs-12">
 				<div class="mydetails slideanim text-center">
 					<div>
-						<%= image_tag "app/man", { class: "img-circle img-responsive", alt: "Generic placeholder image", width: "200", height: "200" } %>
+						<%= image_tag "app/man.jpg", { class: "img-circle img-responsive", alt: "Generic placeholder image", width: "200", height: "200" } %>
 						<h3>Who we are</h3>
 						<p class="short_desc_text"><%= @profile.short_desc %></p>
 					</div>
