Make sure to show the right profile page to which user is log in

--- a/app/views/layouts/search_bar.html.erb
+++ b/app/views/layouts/search_bar.html.erb
@@ -174,19 +174,19 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         				</div>
         				<div class="modal-body md-body">
         					<div class="md-body-fb">
-          						<button>Sign Up with Facebook</button>
+          						<button onclick="window.location.href='/auth/facebook/'">Sign Up with Facebook</button>
           					</div>
           					<br />
           					<div class="md-body-tw">
-          						<button>Sign Up with Twitter</button>
+          						<button onclick="window.location.href='/auth/twitter/'">Sign Up with Twitter</button>
           					</div>
           					<br />
           					<div>
           						<h3>or</h3>
-          					</div>
+          					</div> 
           					<br />
           					<div class="md-body-em">
-          						<button>Sign Up with Email</button>
+          						<button onclick="window.location.href='/users/new/'">Sign Up with Email</button>
           					</div>
           					<br />
           					<br />
